# Hugo

./: .env  COGNITION_ENGINE_IMPLEMENTATION.md  COGNITION_ENGINE_SUMMARY.md  COMPLETE.md  DIRECTIVE_REMOVAL_COMPLETE.md  DIRECTIVE_REMOVAL_PATCH.txt  EXTRACT_AND_ANSWER_IMPLEMENTATION.md  INTEGRATION_COMPLETE.md  LICENSE  Makefile  OLLAMA_RESILIENCE.md  PHASE4.1_COMPLETE.md  PHASE4.4_COMPLETE.md  PHASE4_IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  READY_TO_RUN.md  REFLECTION_ENHANCEMENT_PLAN.md  REFLECTION_SYSTEM.md  REFLECTION_SYSTEM_COMPLETE.md  RESILIENCE_SUMMARY.md  SETUP_GUIDE.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  start_hugo.bat  start_hugo.sh  test_boot_sequence.py  test_ollama_integration.py  verify_reflection.py  verify_setup.py
.claude/: settings.local.json
agents/: __init__.py  claude_bridge.py  worker_agent.py
configs/: docker-compose.yaml  environment.env  hugo_manifest.yaml  network.conf
core/: __init__.py  agent.py  cognition.py  directives.py  logger.py  memory.py  reflection.py  runtime_manager.py  scheduler.py  tasks.py  utils.py
data/: README.md  __init__.py  models.py  postgres_manager.py  sqlite_manager.py
docs/: ARCHITECTURE.md  CHANGELOG.md
runtime/: __init__.py  cli.py  repl.py  service_manager.py  startup.py
scripts/: test_agent_error_reporting.py  test_agent_task.py  test_cognition.py  test_cognition_injection.py  test_extraction_debug.py  test_extraction_synthesis.py  test_fact_detection.py  test_facts_integration.py  test_factual_memory.py  test_internet_autotrigger.py  test_skills.py  (+8 more)
(+64 files in other folders)
